# structvar_data_tools

./: .gitignore  CMakeLists.txt  build_and_grind.sh  build_and_test.sh  readme.md
cram_summarizer/: CMakeLists.txt
cram_summarizer/include/: app.hpp.in  app_control_data.hpp  app_utils.hpp  cram_reader.hpp  simple_alignment.hpp
cram_summarizer/src/: app.cpp  cram_reader.cpp  main.cpp  simple_alignment.cpp
cram_summarizer/test/: alignment_fixture.hpp.in  alignment_reader.cpp  app_utils.cpp  simple_alignment.cpp
cram_summarizer/test/data/: counts.txt  del_1.fa  del_1_sample_1.sam  del_1_sample_2.sam  del_1_sample_3.sam  dup_1.fa  dup_1_sample_1.sam  dup_1_sample_2.sam  dup_2.fa  dup_2_sample_1.sam  dup_2_sample_5.sam  dup_3_sample_2.sam  dup_3_sample_3.sam  dup_3_sample_4.sam  inv_1.fa  inv_1_sample_1.sam
cram_summarizer/tools/: generate_test_data.sh
het_hom_selector/: CMakeLists.txt
het_hom_selector/include/: app.hpp.in  app_control_data.hpp  bcf_reader.hpp
het_hom_selector/src/: app.cpp
het_hom_selector/test/: bcf_reader.cpp
include/: app.hpp.in  app_control_data.hpp  bcf_reader.hpp  bcf_sampler.hpp  main.hpp.in  variant_processor.hpp
src/: app.cpp  bcf_reader.cpp  bcf_sampler.cpp  main.cpp  scratch.cpp  variant_processor.cpp
test/: bcf_reader.cpp  control_flow.cpp  structvar_fixture.hpp.in  structvar_sample.vcf
test/data/: structvar_sample_input.vcf
